--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
   },
   "devDependencies": {
     "eslint": "^8.31.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.11",
-    "msw": "^0.49.2"
+    "msw": "^0.49.2",
+    "prettier": "^2.8.1"
   }
 }
